[package]
name = "os"
version = "0.1.0"
authors = ["sinofp <sinofp@tuta.io>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.6.0"
buddy_system_allocator = "0.4.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2" # Mutex
